2009-04-15 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-tables-tests.md: Tests for the extends field of the typedef table.

2009-04-15 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-tables-tests.md: More tests for the typedef table.

2009-04-15 Rodrigo Kumpera  <rkumpera@novell.com>

	* gen-md-tests.c: Add the or-uint effect.

2009-04-15 Rodrigo Kumpera  <rkumpera@novell.com>

	* data-directory-tests.md:
	* header-tests.md:
	* resources-tests.md: Add comments related to faulty verification
	semantics on MS.

2009-04-14 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-tables-tests.md: Initial tests for the typedef table.

2009-04-14 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-tables-tests.md: More tests for the typeref table.

2009-04-13 Rodrigo Kumpera  <rkumpera@novell.com>

	* Makefile: Fix build of gen-md-tests.

	* cli-tables-tests.md: Tests for the typeref table.

2009-04-03 Rodrigo Kumpera  <rkumpera@novell.com>

	* gen-md-tests.c: Fix table offset calculation.

	* cli-tables-tests.md: Add more tests for the module table.

2009-03-30 Rodrigo Kumpera  <rkumpera@novell.com>

	* gen-md-tests.c: Parse the source assembly using the runtime
	metadata routines.

	* gen-md-tests.c: Add table-row function.

	* Makefile: like gen-md-tests with the runtime.

	* cli-tables-tests.md: Add initial tests for the module table.

2009-03-30 Rodrigo Kumpera  <rkumpera@novell.com>

	assembly-with-resource.cs: Add missing file.

2009-03-27 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-tables-tests.md: Tests for total table sizes.

2009-03-27 Rodrigo Kumpera  <rkumpera@novell.com>

	* cli-tables-tests.md: Tests for heap sizes and minumum #~ size
	to decode row counts.

2009-03-26 Rodrigo Kumpera  <rkumpera@novell.com>

	* gen-md-tests.c: Add tables-header and set-bit helpers.

	* cli-tables-tests.md: New tests for the cli tables.

	* Makefile: Add new tests.

2009-03-24 Rodrigo Kumpera  <rkumpera@novell.com>

	* gen-md-tests.c: Add stream-header and cli-metadata
	helpers.
